--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ django-debug-toolbar==4.3.0
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+django-admin-list-filter-dropdown==1.0.3
